# QFinanceData

./: .gitignore  README.md  agent.md
backend/: pyproject.toml
backend/qfinancedata/: __init__.py  config.py  logging.py  main.py
backend/qfinancedata/api/: actions.py  data_status.py  fundamentals.py  jobs.py  market.py  prices.py  symbols.py
backend/qfinancedata/fetchers/: __init__.py  actions.py  fundamentals.py  metadata.py  prices.py  yf_client.py
backend/qfinancedata/quality/: __init__.py  validators.py
backend/qfinancedata/schemas/: actions.py  data_status.py  fundamentals.py  jobs.py  market.py  prices.py  symbols.py
backend/qfinancedata/services/: actions.py  data_status.py  exports.py  fundamentals.py  jobs.py  market.py  metadata.py  prices.py  symbols.py
backend/qfinancedata/storage/: __init__.py  parquet.py  repositories.py  sqlite.py
backend/tests/: test_actions_api.py  test_actions_fetcher.py  test_config.py  test_data_status_api.py  test_fundamental_fetcher.py  test_fundamentals_api.py  test_health.py  test_jobs_api.py  test_jobs_service.py  test_market_api.py  test_metadata_fetcher.py  test_parquet_storage.py  test_price_normalizer.py  test_prices_api.py  test_sqlite_storage.py  test_symbols_api.py  test_yf_client.py
docs/: debugging-guide.md  development-tasks.md  product-dashboard.md  technical-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx
frontend/src/api/: actions.ts  client.test.ts  client.ts  downloads.ts  fundamentals.ts  jobs.ts  (+7 more)
(+24 files in other folders)
