[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qfinancedata-backend"
version = "0.1.0"
description = "FastAPI backend for QFinanceData."
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "yfinance>=0.2,<0.3"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qfinancedata*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
